Update to adjust to java 11